# QRCodeGenerator

./: .gitignore  CLAUDE.md  README.md  launch.bat  pyproject.toml
src/qrcodegen/: QRCodeGenWidget.py  QRCodeUtils.py  app.py  consts.py  qrCodeGen.py
